--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -58,8 +58,8 @@
                 include_blank: true %>
         </div>
       </div>
-  
-      <%= f.submit 'Search', class: "waves-effect waves-light btn margin-top-15" %>
+
+      <%= f.submit 'Search', class: "waves-effect waves-light btn margin-top-15 btn-large margin-bottom-15" %>
     <% end %>
   </div>
 </div>
