Round advance payment float and layout of user show and home item modals

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -29,7 +29,7 @@
                   </tr>
                   <tr>
                     <td>Advance:</td>
-                    <td><%= @order.item.downpayment_price %></td>
+                    <td><%= @order.item.downpayment_price.to_i %></td>
                   </tr>
                   <tr>
                     <td>City:</td>
