--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -62,20 +62,24 @@
         </div>
         <%= image_tag c.tumbnail_img, class: "modal-image" %><br/>
         <br/>
-        Price: $<%= c.price %> <br/>
-        <span class="like-count"><%= c.item_likes.count %></span> likes
+        <div class="row">
+          <div class="col s6 m6">
+            $<%= c.price %> <br/>
+            <br>
+            <br>
+            <%= c.brand.name %><br/>
+            <%= c.description %><br/>
+          </div>
+          <div class="col s6 m6">
+            <span class="like-count"><%= c.item_likes.count %></span> likes <br>
+            <br>
+            <br>
+            <i class="fa fa-<%= gender_icon(c.gender) %>" aria-hidden="true"></i><br/>
+            <%= c.colors.map(&:name).join(', ') %><br/>
+          </div>
+        </div>
         <br/>
         <br/>
-      </div>
-      <div class= "row">
-        <div class= "col s6 m6">
-          Description: <%= c.description %><br/>
-        </div>
-        <div class= "col s6 m6">
-          Gender: <%= c.gender %><br/>
-          Brand: <%= c.brand.name %><br/>
-          Colors: <%= c.colors.map(&:name).join(', ') %><br/>
-        </div>
       </div>
       <div class="like-btn modal-close btn-flat">
         <% if item_like.nil? %>
